fixing alignment of numeric cells in data tables

--- a/src/scenes/BiochemicalEntityDetails/DataTable/DataTable.scss
+++ b/src/scenes/BiochemicalEntityDetails/DataTable/DataTable.scss
@@ -18,6 +18,7 @@
 
     // right align numeric cells with check boxes
     .ag-numeric-cell {
+      width: 100%;
       .ag-cell-wrapper {
         justify-content: space-between;
       }
